--- a/style.css
+++ b/style.css
@@ -63,164 +63,143 @@ h1{
 .second-part{
     display: flex;
 }
-img{
+
+
+footer {
+    height: 390px;
+    width: 1440px;
+    background: #000000;
+    display: flex;
+    justify-content: space-between;
+}
+
+.logo_mobile_white {
+    width: 115px;
+    height: 68px;
+    margin-bottom: 30px;
+}
+
+.ig {
+    width: 33px;
+    height: 33px;
+    margin-right: 18px;
+}
+
+.fb {
+    width: 32px;
+    height: 32px;
+    margin-right: 21px;
+}
+
+.vk {
+    width: 35px;
+    height: 35px;
+    margin-right: 25px;
+}
+
+.wp {
+    width: 34px;
+    height: 34px;
+}
+
+.phone_white {
+    width: 27px;
+    height: 27px;
+}
+
+.mail_white {
+    width: 27px;
+    height: 18px;
+}
+
+.contact {
+    color: white;
+    font-size: 25px;
+    margin-left: 30px;
+}
+
+.mail {
+    display: flex;
+    align-items: center;
+}
+
+.phone {
+    display: flex;
+    align-items: center;
+}
+
+.copyright {
+    color: white;
+    font-size: 18px;
+}
+
+.left {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 50px;
+    margin-left: 122px;
+}
+
+.right{
+    padding-top: 50px;
+    margin-right: 122px;
+}
+
+.date {
+    font-weight: 700px;
+    font-size: 55px;
+    margin-bottom: 54px;
+}
+
+.dev-price{
+    font-size: 25px;
+}
+
+.price{
+    font-size: 25px;
+}
+
+.price-rubl {
+    font-size: 80px;
+}
+
+.dev-price-rubl {
+    font-size: 80px;
+}
+
+.price-and-date {
+    height: 780px;
+    width: 1440px;
+    background-color: #9DC9C8;
+    display: flex;
+    flex-direction: column;
+}
+
+.frame {
+    margin-left: 122px;
+    margin-top: 179px;
+}
+
+.small-size {
+    font-size: 18px;
+}
+
+.aboute {
+    display: flex;
+    width: 658px;
+    height: 111px;
+    justify-content: space-between;
     position: relative;
+    bottom: 120px;
 }
-.red1{
-    position: absolute;
-width: 667px;
-height: 93px;
-left: 121px;
-top: 2000px;
 
-font-family: 'Roboto Slab';
-font-style: normal;
-font-weight: 700;
-font-size: 55px;
-line-height: 101.38%;
-/* or 56px */
-
-color: #000000;
-
+.about {
+    width: 294px;
+    height: 111px;
 }
-.head1{
-    position: absolute;
-width: 150px;
-height: 39px;
-left: 122px;
-top: 2182px;
 
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 25px;
-line-height: 130%;
-/* or 32px */
-
-
-color: #1E4681;
-}
-.head2{
-    position: absolute;
-width: 214px;
-height: 39px;
-left: 467px;
-top: 2182px;
-
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 25px;
-line-height: 130%;
-/* or 32px */
-
-
-color: #1E4681;
-
-}
-.head3{
-
-    position: absolute;
-width: 150px;
-height: 39px;
-left: 851px;
-top: 2182px;
-
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 25px;
-line-height: 130%;
-/* or 32px */
-
-
-color: #1E4681;
-
-}
-.blok1{
-    position: absolute;
-width: 223px;
-height: 39px;
-left: 122px;
-top: 2222px;
-
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 130%;
-/* or 23px */
-
-
-color: #000000;
-
-}
-.blok2{
-    position: absolute;
-width: 271px;
-height: 109px;
-left: 467px;
-top: 2222px;
-
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 130%;
-/* or 23px */
-
-
-color: #000000;
-}
-.blok3{
-    position: absolute;
-width: 245px;
-height: 39px;
-left: 851px;
-top: 2222px;
-
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 130%;
-/* or 23px */
-
-
-color: #000000;
-}
-.bas1{
-    position: absolute;
-width: 667px;
-height: 93px;
-left: 121px;
-top: 2510px;
-
-font-family: 'Roboto Slab';
-font-style: normal;
-font-weight: 700;
-font-size: 55px;
-line-height: 101.38%;
-/* or 56px */
-
-
-color: #000000;
-}
-.bas2{
-    position: absolute;
-width: 662px;
-height: 374px;
-left: 138px;
-top: 2624px;
-
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 24px;
-line-height: 150%;
-/* or 36px */
-
-
-color: #000000;
-
+.qiymet-rubl{
+position: relative;
+  bottom: 80px;
 }
