--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ footer {
     width: 1440px;
     background: #000000;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .logo_mobile_white {
@@ -45,13 +45,7 @@ footer {
     height: 18px;
 }
 
-.p-phone {
-    color: white;
-    font-size: 25px;
-    margin-left: 30px;
-}
-
-.p-mail {
+.contact {
     color: white;
     font-size: 25px;
     margin-left: 30px;
@@ -77,8 +71,68 @@ footer {
     flex-direction: column;
     justify-content: space-between;
     padding-top: 50px;
+    margin-left: 122px;
 }
 
 .right{
     padding-top: 50px;
-} 
+    margin-right: 122px;
+}
+
+.date {
+    font-weight: 700px;
+    font-size: 55px;
+    margin-bottom: 54px;
+}
+
+.dev-price{
+    font-size: 25px;
+}
+
+.price{
+    font-size: 25px;
+}
+
+.price-rubl {
+    font-size: 80px;
+}
+
+.dev-price-rubl {
+    font-size: 80px;
+}
+
+.price-and-date {
+    height: 780px;
+    width: 1440px;
+    background-color: #9DC9C8;
+    display: flex;
+    flex-direction: column;
+}
+
+.frame {
+    margin-left: 122px;
+    margin-top: 179px;
+}
+
+.small-size {
+    font-size: 18px;
+}
+
+.aboute {
+    display: flex;
+    width: 658px;
+    height: 111px;
+    justify-content: space-between;
+    position: relative;
+    bottom: 120px;
+}
+
+.about {
+    width: 294px;
+    height: 111px;
+}
+
+.qiymet-rubl{
+position: relative;
+  bottom: 80px;
+}
