--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
+/* Murad */
 footer {
     height: 390px;
-    width: 1440px;
+    width: 100%;
     background: #000000;
     display: flex;
     justify-content: space-between;
@@ -47,7 +48,13 @@ footer {
 
 .contact {
     color: white;
+    font-family: 'Roboto',sans-serif;
     font-size: 25px;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: 0em;
+    text-align: left;
+    
     margin-left: 30px;
 }
 
@@ -63,7 +70,13 @@ footer {
 
 .copyright {
     color: white;
+    font-family: 'Roboto',sans-serif;
     font-size: 18px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+    
 }
 
 .left {
@@ -80,8 +93,11 @@ footer {
 }
 
 .date {
-    font-weight: 700px;
+    font-family: 'Roboto Slab', sans-serif;
+    font-style: normal;
+    font-weight: 700;
     font-size: 55px;
+    line-height: 101.38%;
     margin-bottom: 54px;
 }
 
@@ -90,11 +106,21 @@ footer {
 }
 
 .price{
+    font-family: 'Roboto',sans-serif;
     font-size: 25px;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: 0em;
+    text-align: left;
 }
 
 .price-rubl {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
     font-size: 80px;
+    line-height: 101.38%;
+    margin-bottom: 54px;
 }
 
 .dev-price-rubl {
@@ -103,7 +129,7 @@ footer {
 
 .price-and-date {
     height: 780px;
-    width: 1440px;
+    width: 100%;
     background-color: #9DC9C8;
     display: flex;
     flex-direction: column;
@@ -115,7 +141,13 @@ footer {
 }
 
 .small-size {
+    font-family: 'Roboto',sans-serif;
     font-size: 18px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: left;
+    
 }
 
 .aboute {
@@ -135,6 +167,10 @@ footer {
 .qiymet-rubl{
 position: relative;
   bottom: 80px;}
+
+
+
+/* Shovgu */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
 .section-1{
