--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ footer {
     margin-left: 122px;
 }
 
-.right{
+.right {
     padding-top: 50px;
     margin-right: 122px;
 }
@@ -85,11 +85,11 @@ footer {
     margin-bottom: 54px;
 }
 
-.dev-price{
+.dev-price {
     font-size: 25px;
 }
 
-.price{
+.price {
     font-size: 25px;
 }
 
@@ -132,52 +132,65 @@ footer {
     height: 111px;
 }
 
-.qiymet-rubl{
-position: relative;
-  bottom: 80px;}
+.qiymet-rubl {
+    position: relative;
+    bottom: 80px;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap');
-.section-1{
+
+.section-1 {
     margin-left: 120px;
     margin-top: 20px;
     margin-right: 240px;
 }
-.ilk{
+
+.ilk {
     width: 112px;
     height: 66px;
 }
-.logo{
+
+.logo {
     display: flex;
     margin-top: 97px;
 }
-.logo p{
+
+.logo p {
     font-size: 20px;
     width: 130px;
     height: 32px;
     font-weight: 400;
 }
-.globe,.watch,.calendar{
+
+.globe,
+.watch,
+.calendar {
     display: flex;
 }
-.image-1{
+
+.image-1 {
     width: 22px;
     height: 21px;
     margin-top: 11%;
     margin-right: 5%;
 }
-.image-2{
+
+.image-2 {
     width: 22px;
     height: 22px;
     margin-top: 11%;
     margin-right: 5%;
 }
-.image-3{
+
+.image-3 {
     width: 20px;
     height: 22px;
     margin-top: 11%;
     margin-right: 5%;
 }
-h1{
+
+h1 {
     width: 628px;
     height: 190px;
     font-weight: 700;
@@ -185,29 +198,35 @@ h1{
     margin-top: 29px;
     margin-bottom: -10px;
 }
-.img-1{
+
+.img-1 {
     width: 304px;
     height: 356px;
     margin-left: 140px;
 }
-.img-2{
+
+.img-2 {
     width: 274px;
     height: 41px;
     margin-left: -270px;
     margin-top: 335px;
 }
-.img-3{
+
+.img-3 {
     z-index: -1;
 }
-.text p{
+
+.text p {
     width: 370px;
     height: 62px;
     font-size: 20px;
 }
-.second-part{
+
+.second-part {
     display: flex;
 }
-.third-part{
+
+.third-part {
     background-color: #1E4681;
     color: white;
     width: 483.63px;
@@ -216,7 +235,8 @@ h1{
     margin-left: 300px;
     margin-top: 60px;
 }
-.third-part p{
+
+.third-part p {
     width: 400px;
     height: 113px;
     font-size: 25px;
@@ -225,293 +245,329 @@ h1{
     padding-top: 20px;
     padding-left: 25px;
 }
-.name{
+
+.name {
     margin-top: -30px;
     margin-right: 19px;
     margin-left: 220px;
 }
-@media screen and (min-width:992px) and (max-width:1279px){
-    .ilk{
+
+@media screen and (min-width:992px) and (max-width:1279px) {
+    .ilk {
         width: 64.87px;
         height: 38.23px;
     }
-    .logo{
+
+    .logo {
         margin-top: 60px;
     }
-    .logo p{
+
+    .logo p {
         width: 75.29px;
         height: 18.53px;
         font-weight: 400;
         font-size: 12px;
     }
-    .image-1{
+
+    .image-1 {
         width: 12.74px;
         height: 12.16px;
     }
-    .image-2{
+
+    .image-2 {
         width: 12.74px;
         height: 12.74px;
     }
-    .image-3{
+
+    .image-3 {
         width: 11.58px;
         height: 12.74px;
     }
-    h1{
+
+    h1 {
         width: 363.72px;
         height: 110.04px;
         font-size: 46px;
         margin-top: 8px;
     }
-    .img-1{
+
+    .img-1 {
         width: 176.07px;
         height: 206.18px;
         margin-left: 80px;
     }
-    .img-2{
+
+    .img-2 {
         width: 158.69px;
         height: 23.75px;
         margin-top: 195px;
         margin-left: -160px;
     }
-    
+
 }
 
-.section-2{
+.section-2 {
     margin-left: 120px;
     margin-top: 20px;
     font-family: 'Roboto', sans-serif;
 }
-.main h1{
+
+.main h1 {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 55px;
 }
-.main p{
+
+.main p {
     font-family: 'Roboto';
     font-weight: 400;
     font-size: 24px;
     width: 600px;
 }
-.image{
+
+.image {
     margin-top: 5%;
     position: relative;
 }
-.first{
+
+.first {
     display: flex;
     justify-content: space-between;
     margin-bottom: 5%;
 }
-.second{
+
+.second {
     display: flex;
     font-size: 15px;
 }
-h3{
+
+h3 {
     font-size: 24px;
 }
-.image-6{
+
+.image-6 {
     margin-right: 200px;
     width: 232px;
     height: 203px;
 }
-.image-8{
+
+.image-8 {
     width: 189px;
     height: 32px;
     margin-left: -400px;
     margin-top: 190px;
     z-index: -1;
 }
-.image-5{
+
+.image-5 {
     width: 366px;
     height: 59px;
     z-index: -1;
     margin-left: -450px;
     margin-top: 480px;
 }
-.image-4{
+
+.image-4 {
     width: 314px;
     height: 315px;
     margin-left: 50px;
     margin-top: 130px;
 }
-.one,.two,.three{
+
+.one,
+.two,
+.three {
     width: 150px;
     height: 39px;
     font-weight: 400;
     font-size: 18px;
 }
-.one{
+
+.one {
     margin-right: 95px;
     margin-left: 132px;
 }
-.two{
+
+.two {
     margin-right: 95px;
 }
-h3{
+
+h3 {
     font-weight: 700;
     font-size: 25px;
 }
 
 /* Mehemmed */
-.red1{
+.red1 {
 
-width: 667px;
-height: 93px;
-margin-left: 100px;
-
-
-font-family: 'Roboto Slab';
-font-style: normal;
-font-weight: 700;
-font-size: 55px;
-line-height: 101.38%;
-/* or 56px */
-
-color: #000000;
-
-}
-.head1{
-
-width: 150px;
-height: 39px;
-margin-left: 100px;
+    width: 667px;
+    height: 93px;
+    margin-left: 100px;
 
 
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 25px;
-line-height: 130%;
-/* or 32px */
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 55px;
+    line-height: 101.38%;
+    /* or 56px */
 
-
-color: #1E4681;
-}
-.head2{
-
-width: 214px;
-height: 39px;
-margin-left: 100px;
-
-
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 25px;
-line-height: 130%;
-/* or 32px */
-
-
-color: #1E4681;
+    color: #000000;
 
 }
-.head3{
 
-width: 150px;
-height: 39px;
-margin-left: 100px;
+.head1 {
 
-
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 700;
-font-size: 25px;
-line-height: 130%;
-/* or 32px */
+    width: 150px;
+    height: 39px;
+    margin-left: 100px;
 
 
-color: #1E4681;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 130%;
+    /* or 32px */
+
+
+    color: #1E4681;
+}
+
+.head2 {
+
+    width: 214px;
+    height: 39px;
+    margin-left: 100px;
+
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 130%;
+    /* or 32px */
+
+
+    color: #1E4681;
 
 }
-.blok1{
-   
-width: 223px;
-height: 39px;
-margin-left: 100px;
+
+.head3 {
+
+    width: 150px;
+    height: 39px;
+    margin-left: 100px;
 
 
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 130%;
-/* or 23px */
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 25px;
+    line-height: 130%;
+    /* or 32px */
 
 
-color: #000000;
-
-}
-.blok2{
-
-width: 271px;
-height: 109px;
-margin-left: 100px;
-
-
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 130%;
-/* or 23px */
-
-
-color: #000000;
-}
-.blok3{
-
-width: 245px;
-height: 39px;
-margin-left: 100px;
-
-
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 130%;
-/* or 23px */
-
-
-color: #000000;
-}
-.bas1{
-
-width: 667px;
-height: 93px;
-margin-left: 100px;
-
-
-font-family: 'Roboto Slab';
-font-style: normal;
-font-weight: 700;
-font-size: 55px;
-line-height: 101.38%;
-/* or 56px */
-
-
-color: #000000;
-}
-.bas2{
-
-width: 662px;
-height: 374px;
-margin-left: 100px;
-
-
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 400;
-font-size: 24px;
-line-height: 150%;
-/* or 36px */
-
-
-color: #000000;
+    color: #1E4681;
 
 }
-.flex{
+
+.blok1 {
+
+    width: 223px;
+    height: 39px;
+    margin-left: 100px;
+
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 130%;
+    /* or 23px */
+
+
+    color: #000000;
+
+}
+
+.blok2 {
+
+    width: 271px;
+    height: 109px;
+    margin-left: 100px;
+
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 130%;
+    /* or 23px */
+
+
+    color: #000000;
+}
+
+.blok3 {
+
+    width: 245px;
+    height: 39px;
+    margin-left: 100px;
+
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 130%;
+    /* or 23px */
+
+
+    color: #000000;
+}
+
+.bas1 {
+
+    width: 667px;
+    height: 93px;
+    margin-left: 100px;
+
+
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 55px;
+    line-height: 101.38%;
+    /* or 56px */
+
+
+    color: #000000;
+}
+
+.bas2 {
+
+    width: 662px;
+    height: 374px;
+    margin-left: 100px;
+
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 24px;
+    line-height: 150%;
+    /* or 36px */
+
+
+    color: #000000;
+
+}
+
+.flex {
     display: flex;
 }
+
 /* Tural */
 .cedveller {
     margin-left: 121px;
@@ -522,22 +578,17 @@ color: #000000;
     font-family: 'Roboto Slab', serif;
 }
 
-.boxes1 {
-    display: flex;
+.allboxes {
     justify-content: center;
-
-}
-
-.boxes2 {
+    width: 89%;
+    margin: auto;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    flex-wrap: wrap;
 }
 
-.boxes3 {
-    display: flex;
-    margin-left: 99px;
 
-}
+
 
 .box1 {
     margin-right: 37px;
@@ -611,7 +662,7 @@ color: #000000;
     height: 328px;
 }
 
-.boxes1 h3 {
+.allboxes h3 {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
@@ -621,25 +672,9 @@ color: #000000;
     margin-left: 20px;
 }
 
-.boxes2 h3 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 30px;
-    margin: 0;
-    margin-left: 20px;
-}
 
-.boxes3 h3 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 30px;
-    margin: 0;
-    margin-left: 20px;
-}
 
-.boxes1 p {
+.allboxes p {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
@@ -647,29 +682,12 @@ color: #000000;
     margin: 0;
     margin-left: 20px;
     margin-top: 32px;
+    width: 365px;
 }
 
-.boxes2 p {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 25px;
-    margin: 0;
-    margin-left: 20px;
-    margin-top: 32px;
-}
 
-.boxes3 p {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 25px;
-    margin: 0;
-    margin-left: 20px;
-}
-
-.box7 p {
-    margin-top: 32px;
+.box8 p {
+    margin-top: 0px;
 }
 
 .bozhisse {
@@ -736,4 +754,134 @@ color: #000000;
     width: 32px;
     height: 31px;
     margin-left: 30px;
+}
+
+@media screen and (min-width:992px) and (max-width:1279px) {
+    .cedveller {
+        margin-left: 70px;
+        width: 524.15px;
+        height: 53.86px;
+        font-weight: 700;
+        font-size: 32px;
+        font-family: 'Roboto Slab', serif;
+    }
+
+    .box1 {
+        width: 231.09px;
+        height: 189.97px;
+        margin-right: 21px;
+        margin-bottom: 23px;
+    }
+
+    .box2 {
+        width: 231.09px;
+        height: 189.97px;
+        margin-right: 21px;
+        margin-bottom: 23px;
+    }
+
+    .box3 {
+        width: 231.09px;
+        height: 189.97px;
+        margin-right: 21px;
+        margin-bottom: 23px;
+    }
+
+    .box4 {
+        width: 231.09px;
+        height: 189.97px;
+        margin-right: 21px;
+        margin-bottom: 23px;
+    }
+
+    .box5 {
+        width: 231.09px;
+        height: 189.97px;
+        margin-right: 21px;
+        margin-bottom: 23px;
+    }
+
+    .box6 {
+        width: 231.09px;
+        height: 189.97px;
+        margin-right: 21px;
+        margin-bottom: 23px;
+    }
+
+    .box7 {
+        width: 231.09px;
+        height: 189.97px;
+        margin-right: 21px;
+        margin-bottom: 23px;
+    }
+
+    .box8 {
+        width: 231.09px;
+        height: 189.97px;
+        margin-right: 21px;
+        margin-bottom: 23px;
+    }
+
+    .allboxes img {
+        width: 231.09px;
+        height: 92.67px;
+    }
+
+    .allboxes h3 {
+        width: 211.4px;
+        height: 22.59px;
+        font-size: 17px;
+        margin-left: 11px;
+    }
+
+    .allboxes p {
+        width: 211.4px;
+        height: 36.49px;
+        font-size: 14px;
+        margin: 0;
+        margin-left: 11px;
+        margin-top: 18px;
+    }
+
+    .bozhisse h2 {
+        width: 571.64px;
+        height: 53.86px;
+        font-size: 32px;
+        margin-left: 70px;
+    }
+
+    .bozunichi {
+        width: 458.12px;
+        height: 261.2px;
+        margin-left: 72px;
+        padding: 0;
+        padding-top: 23px;
+
+    }
+
+    .bozunichi p {
+        width: 405.42px;
+        height: 117.57px;
+        margin-left: 26px;
+        margin-top: 0;
+        font-size: 12px;
+    }
+
+    .portre {
+        width: 110.04px;
+        height: 97.88px;
+        margin-left: 15px;
+    }
+
+    .FB p {
+        width: 204.45px;
+        height: 34.17px;
+        font-size: 17px;
+        margin-top: 28px;
+    }
+
+    .FB img {
+        width: 18.53px;
+        height: 17.95px;
+    }
 }
