--- a/style.css
+++ b/style.css
@@ -352,11 +352,14 @@ h3{
 }
 
 /* Mehemmed */
+
 .red1{
 
 width: 667px;
 height: 93px;
 margin-left: 121px;
+
+margin-bottom: 0px;
 
 
 font-family: 'Roboto Slab';
@@ -375,7 +378,7 @@ width: 150px;
 height: 39px;
 margin-left: 121px;
 
-
+margin-bottom: 0;
 font-family: 'Roboto';
 font-style: normal;
 font-weight: 700;
@@ -385,13 +388,14 @@ line-height: 130%;
 
 
 color: #1E4681;
+
 }
 .head2{
 
 width: 214px;
 height: 39px;
 margin-left: 121px;
-
+margin-bottom: 0;
 
 font-family: 'Roboto';
 font-style: normal;
@@ -409,7 +413,7 @@ color: #1E4681;
 width: 150px;
 height: 39px;
 margin-left: 121px;
-
+margin-bottom: 0;
 
 font-family: 'Roboto';
 font-style: normal;
@@ -426,8 +430,8 @@ color: #1E4681;
    
 width: 223px;
 height: 39px;
-margin-left: 100px;
-
+margin-left: 121px;
+margin-top: 0;
 
 font-family: 'Roboto';
 font-style: normal;
@@ -439,13 +443,14 @@ line-height: 130%;
 
 color: #000000;
 
+
 }
 .blok2{
 
 width: 271px;
 height: 109px;
 margin-left: 121px;
-
+margin-top: 0;
 
 font-family: 'Roboto';
 font-style: normal;
@@ -462,7 +467,7 @@ color: #000000;
 width: 245px;
 height: 39px;
 margin-left: 121px;
-
+margin-top: 0;
 
 font-family: 'Roboto';
 font-style: normal;
@@ -487,7 +492,7 @@ font-weight: 700;
 font-size: 55px;
 line-height: 101.38%;
 /* or 56px */
-
+margin-bottom: 0;
 
 color: #000000;
 }
@@ -511,6 +516,9 @@ color: #000000;
 }
 .flex{
     display: flex;
+    width:300px;
+   
+
 }
 /* Tural */
 .cedveller {
@@ -736,4 +744,307 @@ color: #000000;
     width: 32px;
     height: 31px;
     margin-left: 30px;
+}
+@media screen and (min-width:992px) and (max-width:1279px){
+.red1{
+    width: 386.3px;
+    height: 53.86px;
+    margin-left: 70.08px;
+    
+
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 101.38%;
+    /* or 32px */
+    color: #000000;
+}
+
+.head1{
+
+    width: 86.88px;
+    height: 22.59px;
+    margin-left: 70.66px;
+   
+    margin-right: 46px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 130%;
+    /* or 19px */
+    
+    
+    color: #1E4681;
+
+}
+.blok1{
+    width: 153px;
+    height: 22px;
+    margin-left: 71px;   
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 130%;
+    /* or 14px */
+    color: #000000;
+    margin-right: 46px;
+}
+.head2{
+
+    width: 123.94px;
+    height: 22.59px;
+    margin-right: 50,87;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 15px;
+    line-height: 130%;
+    /* or 19px */
+    color: #1E4681;
+}
+.blok2{
+
+    width: 172px;
+height: 63px;
+margin-right: 50,87;
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 400;
+font-size: 11px;
+line-height: 130%;
+/* or 14px */
+
+
+color: #000000;
+}
+
+.head3{
+    width: 86.88px;
+height: 22.59px;
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 15px;
+line-height: 130%;
+/* or 19px */
+
+
+color: #1E4681;
+}
+
+.blok3{
+
+    width: 141.9px;
+    height: 22.59px;
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 11px;
+    line-height: 130%;
+    /* or 14px */
+    
+    
+    color: #000000;
+    
+
+}
+.bas1{
+    width: 386.3px;
+    height: 53.86px;
+    margin-left: 70.08px;  
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 101.38%;
+    /* or 32px */
+    
+    
+    color: #000000;
+
+
+}
+
+.bas2{
+    width: 383.41px;
+    height: 216.61px;
+    margin-left: 79.92px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 150%;
+    /* or 21px */
+    
+    
+    color: #000000;
+    
+
+
+}
+
+
+
+}
+@media screen and (min-width:320px) and (max-width:991px){
+.red1{
+
+    width: 310.8px;
+height: 43.34px;
+margin-left: 36px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 26px;
+line-height: 101.38%;
+/* or 26px */
+color: #000000;
+
+}
+.head1{
+    width: 69.9px;
+    height: 18.17px;
+    margin-left: 35px;
+ 
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 130%;
+    /* or 16px */
+    color: #1E4681;
+}
+.head2{
+    width: 99.72px;
+    height: 18.17px;
+    margin-left: 35.38px;
+   
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 130%;
+    /* or 16px */
+    
+    
+    color: #1E4681;
+
+
+}
+.blok1{
+
+    width: 180px;
+    height: 48px;
+    margin-left: 35px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 130%;
+    /* or 13px */
+    
+    
+    color: #000000;
+
+}
+.blok2{
+
+    width: 165px;
+    height: 51px;
+    margin-left: 35px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 130%;
+    /* or 13px */
+    color: #000000;
+    
+
+}
+
+.head3{
+
+    width: 69.9px;
+    height: 18.17px;
+    margin-left: 36px;
+
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 12px;
+    line-height: 130%;
+    /* or 16px */
+    
+    
+    color: #1E4681;
+    
+
+}
+.blok3{
+    width: 159px;
+    height: 31px;
+    margin-left: 36px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 130%;
+    /* or 13px */    
+    color: #000000;
+    
+}
+
+.flex{
+    display: inline;
+}
+
+.bas1{
+    width: 310.8px;
+    height: 43.34px;
+    margin-left: 36px;
+
+    
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 101.38%;
+    /* or 26px */
+    
+    
+    color: #000000;
+
+
+}
+.bas2{
+    width: 299px;
+    height: 174px;
+    margin-left: 44px;
+
+    
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    /* or 18px */
+    
+    
+    color: #000000;
+
+}
+
+
+
+
 }
