--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ footer {
 }
 
 .right{
-    padding-top: 50px;
+    padding-top: 54px;
     margin-right: 122px;
 }
 
@@ -137,7 +137,7 @@ footer {
 
 .frame {
     margin-left: 122px;
-    margin-top: 179px;
+    margin-top: 186px;
 }
 
 .small-size {
@@ -169,6 +169,181 @@ position: relative;
   bottom: 80px;}
 
 
+@media screen and (min-width:992px) and (max-width:1279px){
+    footer {
+        height: 225.88px;
+        width: 100%;
+        background: #000000;
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .logo_mobile_white {
+        width: 66.6px;
+        height: 39.38px;
+        margin-bottom: 17px;
+    }
+    
+    .ig {
+        width: 19.11px;
+        height: 19.11px;
+        margin-right: 10.43px;
+    }
+    
+    .fb {
+        width: 18.53px;
+        height: 18.53px;
+        margin-right: 12.16px;
+    }
+    
+    .vk {
+        width: 20.27px;
+        height: 20.27px;
+        margin-right: 14.48px;
+    }
+    
+    .wp {
+        width: 19.69px;
+        height: 19.69px;
+    }
+    
+    .phone_white {
+        width: 15.64px;
+        height: 15.64px;
+    }
+    
+    .mail_white {
+        width: 15.64px;
+        height: 10.43px;
+    }
+    
+    .contact {
+        color: white;
+        font-family: 'Roboto',sans-serif;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 14.19px;
+        letter-spacing: 0em;
+        text-align: left;
+        
+        margin-left: 12.74px;
+    }
+    
+    .mail {
+        display: flex;
+        align-items: center;
+    }
+    
+    .phone {
+        display: flex;
+        align-items: center;
+    }
+    
+    .copyright {
+        color: white;
+        font-family: 'Roboto',sans-serif;
+        font-size: 10px;
+        font-weight: 400;
+        line-height: 10.14px;
+        letter-spacing: 0em;
+        text-align: left;
+        
+    }
+    
+    .left {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        padding-top: 28.96px;
+        margin-left: 8.5%;
+    
+        margin-bottom: 1.6%;
+    }
+    
+    .right{
+        padding-top: 31.28px;
+        margin-right: 8.5%;
+    }
+}
+
+@media screen and (min-width:992px) and (max-width:1279px){
+    .date {
+        font-family: 'Roboto Slab', sans-serif;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 32px;
+        line-height: 32.44px;
+        margin-bottom: 54px;
+    }
+    
+    .dev-price{
+        font-size: 25px;
+    }
+    
+    .price{
+        font-family: 'Roboto',sans-serif;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 14.19px;
+        letter-spacing: 0em;
+        text-align: left;
+    }
+    
+    .price-rubl {
+        font-family: 'Roboto', sans-serif;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 46px;
+        line-height: 101.38%;
+        margin-bottom: 54px;
+    }
+    
+    .dev-price-rubl {
+        font-size: 46px;
+    }
+    
+    .price-and-date {
+        height: 451.75px;
+        width: 100%;
+        background-color: #9DC9C8;
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .frame {
+        margin-left: 8.5%;
+        margin-top: 104px;
+    }
+    
+    .small-size {
+        font-family: 'Roboto',sans-serif;
+        font-size: 10px;
+        font-weight: 400;
+        line-height: 10.14px;
+        letter-spacing: 0em;
+        text-align: left;
+        
+    }
+    
+    .aboute {
+        display: flex;
+        width: 45.7%;
+        height: 64px;
+        justify-content: space-between;
+        position: relative;
+        bottom: 120px;
+    }
+    
+    .about {
+        width: 171px;
+        height: 64px;
+    }
+    
+    .qiymet-rubl{
+    position: relative;
+      bottom: 80px;}
+
+}
 
 /* Shovgu */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap');
