--- a/style.css
+++ b/style.css
@@ -843,6 +843,10 @@ h3 {
         margin-top: 18px;
     }
 
+    .bozhisse {
+        width: 100%;
+    }
+
     .bozhisse h2 {
         width: 571.64px;
         height: 53.86px;
@@ -883,5 +887,88 @@ h3 {
     .FB img {
         width: 18.53px;
         height: 17.95px;
+    }
+}
+
+@media screen and (min-width:320px) and (max-width:991px) {
+    .cedveller {
+        width: 421.7px;
+        height: 43.34px;
+        font-size: 26px;
+        margin-left: 34px;
+    }
+
+    .allboxes {
+        display: inline;
+
+    }
+
+    .box1 {
+        width: 185.92px;
+        height: 152.84px;
+
+    }
+
+    .box2 {
+        width: 185.92px;
+        height: 152.84px;
+
+    }
+
+    .box3 {
+        width: 185.92px;
+        height: 152.84px;
+
+    }
+
+    .box4 {
+        width: 185.92px;
+        height: 152.84px;
+
+    }
+
+    .box5 {
+        width: 185.92px;
+        height: 152.84px;
+
+    }
+
+    .box6 {
+        width: 185.92px;
+        height: 152.84px;
+
+    }
+
+    .box7 {
+        width: 185.92px;
+        height: 152.84px;
+
+    }
+
+    .box8 {
+        width: 185.92px;
+        height: 152.84px;
+
+    }
+
+    .allboxes h3 {
+        width: 170.08px;
+        height: 18.17px;
+        font-size: 14px;
+        margin-left: 9px;
+    }
+
+    .allboxes img {
+        width: 185.92px;
+        height: 74.56px;
+    }
+
+    .allboxes p {
+        width: 170.08px;
+        height: 29.36px;
+        font-size: 14px;
+        margin: 0;
+        margin-left: 9px;
+        margin-top: 14px;
     }
 }
