--- a/style.css
+++ b/style.css
@@ -546,6 +546,79 @@ h1 {
         margin-top: -20px;
     }
 }
+@media screen and (min-width:320px) and (max-width:991px){
+    .section-1{
+        margin-top: 36px;
+        margin-left: 35px;
+    }
+    .ilk{
+        width: 52.19px;
+        height: 30.75px;
+    }
+    .logo{
+        margin-top: 45px;
+    }
+    .logo p{
+        width: 60.58px;
+        height: 14.91px;
+        font-weight: 400;
+        font-size: 10px;
+    }
+    .image-1{
+        width: 10.25px;
+        height: 9.79px;
+    }
+    .image-2{
+        width: 10.25px;
+        height: 10.25px;
+    }
+    .image-3{
+        width: 9.32px;
+        height: 10.25px;
+    }
+    h1{
+        width: 292.63px;
+        height: 88.53px;
+        font-weight: 700;
+        font-size: 37px;
+        margin-top: 8px;
+    }
+    .text p{
+        width: 212.4px;
+        height: 28.96px;
+        font-size: 10px;
+    }
+    .second-part{
+        display: block;
+    }
+    .img-1{
+        width: 141.66px;
+        height: 165.89px;
+    }
+    .img-2{
+        width: 127.68px;
+        height: 19.1px;
+        margin-top: -5px;
+        margin-left: 155px;
+    }
+    .third-part{
+        width: 225.36px;
+        height: 93.19px;
+        margin-left: 0px;
+    }
+    .third-part p{
+        width: 170.64px;
+        height: 52.65px;
+        font-weight: 400;
+        font-size: 11px;
+        padding-left: 12px;
+        padding-top: 8px;
+    }
+    .name{
+        margin-left: 110px;
+        margin-top: -15px;
+    }
+}
 
 .section-2 {
     margin-left: 120px;
@@ -694,6 +767,58 @@ h3 {
     .two{
         margin-right: 32px;
     }
+}
+@media screen and (min-width:320px) and (max-width:991px){
+    .section-2{
+        margin-left: 35px;
+    }
+    .main h1{
+        width: 170.08px;
+        font-size: 26px;
+        margin-top: 75px;
+    }
+    .main p{
+        width: 308.47px;
+        font-size: 12px;
+        margin-top: 50px;
+    }
+    .image-4{
+        width: 146.32px;
+        height: 146.78px;
+        margin-top: 0;
+        margin-left: 75px;
+    }
+    .image-5{
+        width: 170.55px;
+        height: 27.49px;
+        margin-top: 0px;
+        margin-left: 60px;
+    }
+    .image-6,.image-8{
+        display: none;
+    }
+    .first{
+        display: block;
+    }
+    h3{
+        font-weight: 700;
+        font-size: 12px;
+    }
+    .one,.two,.three{
+        width: 86px;
+        height: 18px;
+        font-size: 10px;
+        margin-top: 0;
+        margin-bottom: 50px;
+    }
+    .one{
+        margin-left: 0;
+        margin-right: 33px;
+    }
+    .two{
+        margin-right: 0;
+    }
+    
 }
 /* Mehemmed */
 
